syntax = "proto3";

option go_package = "github.com/yedf/dtm/dtmpb";

package dtmcli;

// The dtm service definition.
service Dtm {
  rpc Call(DtmRequest) returns (DtmReply) {}
  rpc Submit(DtmRequest) returns (DtmReply) {}

}

message DtmTransInfo {
  string Gid = 1;
  string TransType = 2;
  string BranchID = 3;
  string BranchType = 4;
  string Dtm = 5;
}

// The request message containing the user's name.
message DtmRequest {
  string Gid = 1;
  string TransType = 2;
  string QueryPrepared = 3;
  bool WaitResult = 4;
  map<string, string> Extra = 5;
  string Data = 6;
}

// The response message containing the greetings
message DtmReply {
  string DtmResult = 1;
  string DtmMessage = 2;
}

// The request message containing the user's name.
message BusiRequest {
  dtmcli.DtmTransInfo info = 1;
  map<string, string> Extra = 2;
  bytes AppData = 3;
}

// The response message containing the greetings
message BusiReply {
  string DtmResult = 1;
  string DtmMessage = 2;
}